[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/StagePresentation.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = ExtResource( 1 )

[node name="LevelPresentation" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 358.0
margin_top = 276.0
margin_right = 666.0
margin_bottom = 324.0
alignment = 1

[node name="StageLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 308.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "stage %d"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryNumbers" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 308.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "You have %d tries left"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
